# Jarvis

./: .gitignore  LICENSE  README.md  TASK_TESTING_GUIDE.md  package-lock.json  package.json  test_newsapi.py
backend/: .dockerignore  .gitignore  Dockerfile  INTENT_CLASSIFICATION.md  README.md  pyproject.toml  requirements.txt  test_capabilities.py  test_conversation_manual.py  test_intent.py  test_learn_intent.py  test_profile_system.py  test_task_authentication.py  test_task_crud.py  verify_task_auth.py
backend/app/: config.py  config.py.bak  main.py
backend/app/api/: auth.py  chat.py  files.py  fitbit_auth.py  gmail_auth.py  profile.py  tasks.py  voice.py
backend/app/middleware/: __init__.py  auth_middleware.py
backend/app/services/: calendar_tool.py  fitbit_tool.py  gemini.py  gemini.py.bak  gemini.py.bak2  gemini_task_extraction.py  gmail_tool.py  learning_tool.py  learning_tool.py.bak3  learning_tool.py.bak4  memory_service.py  news_tool.py  orchestrator.py  profile_extraction.py  profile_tool.py  stt.py  task_tool.py  tts.py  weather_tool.py  yelp_tool.py
backend/tests/: test_conversation.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AcknowledgmentCard.tsx  ChatInput.tsx  JarvisOrb.tsx  ProfileView.tsx  PushToTalk.tsx  SettingsPanel.tsx  TasksView.tsx  VisualRenderPanel.tsx
shared/: README.md  package.json  tsconfig.json
shared/python/: __init__.py  schemas.py
shared/typescript/: index.ts
(+8 files in other folders)
